--- a/Content.Client/Power/PowerMonitoringWindow.xaml
+++ b/Content.Client/Power/PowerMonitoringWindow.xaml
@@ -1,118 +1,152 @@
-<controls:FancyWindow xmlns="https://spacestation14.io"
+<ui:PowerMonitoringWindow xmlns="https://spacestation14.io"
                xmlns:ui="clr-namespace:Content.Client.Power"
-               xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
-               Title="{Loc 'power-monitoring-window-title'}"
                Resizable="False"
+               MouseFilter="Stop"
                SetSize="1120 750"
                MinSize="1120 750">
-    <BoxContainer Orientation="Vertical">
-        <!-- Main display -->
-        <BoxContainer Orientation="Horizontal" VerticalExpand="True" HorizontalExpand="True">
-            <!-- Nav map -->
-            <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
-                <ui:PowerMonitoringConsoleNavMapControl Name="NavMap" Margin="5 5" VerticalExpand="True" HorizontalExpand="True">
+    <PanelContainer Name="Background" StyleClasses="PdaBackgroundRect" ModulateSelfOverride="#22232e"/>
+    <PanelContainer Name="Border" StyleClasses="PdaBorderRect"/>
 
-                    <!-- System warning -->
-                    <PanelContainer Name="SystemWarningPanel"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Top"
-                                    HorizontalExpand="True"
-                                    Margin="0 48 0 0"
-                                    Visible="False">
-                        <RichTextLabel Name="SystemWarningLabel" Margin="12 8 12 8"/>
-                    </PanelContainer>
+    <BoxContainer Orientation="Vertical" HorizontalExpand="True">
 
+        <!-- Крестик для выхода -->
+        <BoxContainer SetHeight="26" Margin="15 5" Orientation="Horizontal" HorizontalAlignment="Right">
+            <TextureButton Name="CloseButton" StyleClasses="windowCloseButton" Modulate="#646464" VerticalAlignment="Center" Margin="0 4 0 0"/>
+        </BoxContainer>
 
-                </ui:PowerMonitoringConsoleNavMapControl>
+        <!-- Содержимое -->
+        <Control Margin="15 0 15 15" RectClipContent="True" VerticalExpand="true" HorizontalExpand="True">
 
-                <!-- Nav map legend -->
-                <BoxContainer Orientation="Horizontal" Margin="0 10 0 10">
-                    <TextureRect Stretch="KeepAspectCentered"
-                                 TexturePath="/Textures/Interface/NavMap/beveled_circle.png"
-                                 Modulate="#800080"
-                                 SetSize="16 16"
-                                 Margin="20 0 5 0"/>
-                    <Label Text="{Loc 'power-monitoring-window-label-sources'}"/>
-                    <TextureRect Stretch="KeepAspectCentered"
-                                 TexturePath="/Textures/Interface/NavMap/beveled_hexagon.png"
-                                 SetSize="16 16"
-                                 Modulate="#ff4500"
-                                 Margin="20 0 5 0"/>
-                    <Label Text="{Loc 'power-monitoring-window-label-smes'}"/>
-                    <TextureRect Stretch="KeepAspectCentered"
-                                 TexturePath="/Textures/Interface/NavMap/beveled_square.png"
-                                 SetSize="16 16"
-                                 Modulate="#ffff00"
-                                 Margin="20 0 5 0"/>
-                    <Label Text="{Loc 'power-monitoring-window-label-substation'}"/>
-                    <TextureRect Stretch="KeepAspectCentered"
-                                 TexturePath="/Textures/Interface/NavMap/beveled_triangle.png"
-                                 SetSize="16 16"
-                                 Modulate="#32cd32"
-                                 Margin="20 0 5 0"/>
-                    <Label Text="{Loc 'power-monitoring-window-label-apc'}"/>
-                </BoxContainer>
-            </BoxContainer>
+            <!-- Контрастный цвет -->
+            <PanelContainer ModulateSelfOverride="#FFFFFF" StyleClasses="PdaBackground">
+                <PanelContainer.PanelOverride>
+                    <gfx:StyleBoxFlat BackgroundColor="#050c0d" BorderColor="#1d1e27" BorderThickness="3"/>
+                </PanelContainer.PanelOverride>
+            </PanelContainer>
 
-            <!-- Power status -->
-            <BoxContainer Orientation="Vertical" VerticalExpand="True" SetWidth="440" Margin="0 0 10 10">
+            <!-- Main display -->
+            <BoxContainer Margin="3 3 3 3" Orientation="Horizontal" SeparationOverride="20" VerticalExpand="True" HorizontalExpand="True">
+                <!-- Nav map -->
+                <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
+                    <BoxContainer Orientation="Vertical">
+                        <PanelContainer>
+                            <!-- Окантовка вокруг карты -->
+                            <PanelContainer.PanelOverride>
+                                <gfx:StyleBoxFlat BorderColor="#4bb2b5" BorderThickness="2" />
+                            </PanelContainer.PanelOverride>
+                            <ui:PowerMonitoringConsoleNavMapControl Name="NavMap" SetHeight="618" VerticalExpand="True" HorizontalExpand="True">
+                                <!-- System warning -->
+                                <PanelContainer Name="SystemWarningPanel"
+                                                HorizontalAlignment="Center"
+                                                VerticalAlignment="Top"
+                                                HorizontalExpand="True"
+                                                Margin="0 48 0 0"
+                                                Visible="False">
+                                    <RichTextLabel Name="SystemWarningLabel" Margin="12 8 12 8"/>
+                                </PanelContainer>
+                            </ui:PowerMonitoringConsoleNavMapControl>
+                        </PanelContainer>
+                    </BoxContainer>
 
-                <!-- Station name -->
-                <controls:StripeBack>
-                    <PanelContainer>
-                        <RichTextLabel Name="StationName" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 5 0 3"/>
-                    </PanelContainer>
-                </controls:StripeBack>
-
-                <!-- Power overview -->
-                <GridContainer Columns="2">
-                    <Label StyleClasses="highlight" Text="{Loc 'power-monitoring-window-total-sources'}"/>
-                    <Label Name="TotalSources" Text="?" Margin="10 0 0 0"/>
-                    <Label StyleClasses="highlight" Text="{Loc 'power-monitoring-window-total-battery-usage'}"/>
-                    <Label Name="TotalBatteryUsage" Text="?" Margin="10 0 0 0"/>
-                    <Label StyleClasses="highlight" Text="{Loc 'power-monitoring-window-total-loads'}"/>
-                    <Label Name="TotalLoads" Text="?" Margin="10 0 0 0"/>
-                </GridContainer>
-
-                <!-- Loads / Sources (entries added by C# code) -->
-                <TabContainer Name="MasterTabContainer" VerticalExpand="True" HorizontalExpand="True" Margin="0 10 0 0">
-                    <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
-                        <BoxContainer Name="SourcesList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
-                    </ScrollContainer>
-                    <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
-                        <BoxContainer Name="SMESList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
-                    </ScrollContainer>
-                    <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
-                        <BoxContainer Name="SubstationList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
-                    </ScrollContainer>
-                    <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
-                        <BoxContainer Name="ApcList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
-                    </ScrollContainer>
-                </TabContainer>
-
-                <!-- Cable network toggles -->
-                <BoxContainer Orientation="Vertical" Margin="0 10 0 0">
-                    <Label Text="{Loc 'power-monitoring-window-show-cable-networks'}" Margin="0 0 0 5"/>
-                    <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
-                        <CheckBox Name="ShowHVCable" Text="{Loc 'power-monitoring-window-show-hv-cable'}" Pressed="True" Margin="0 0 0 0"/>
-                        <CheckBox Name="ShowMVCable" Text="{Loc 'power-monitoring-window-show-mv-cable'}" Pressed="True" Margin="10 0 0 0"/>
-                        <CheckBox Name="ShowLVCable" Text="{Loc 'power-monitoring-window-show-lv-cable'}" Pressed="True" Margin="10 0 0 0"/>
+                    <!-- Nav map legend -->
+                    <BoxContainer Orientation="Horizontal" Margin="5 10 0 10" SeparationOverride="10">
+                        <BoxContainer>
+                            <TextureRect Margin="0 2 2 0" Stretch="KeepAspectCentered" TexturePath="/Textures/Interface/NavMap/beveled_circle.png" Modulate="#800080" SetSize="16 16"/>
+                            <Label Modulate="#4bb2b5" Text="{Loc 'power-monitoring-window-label-sources'}"/>
+                        </BoxContainer>
+                        <BoxContainer>
+                            <TextureRect Margin="0 2 2 0" Stretch="KeepAspectCentered" TexturePath="/Textures/Interface/NavMap/beveled_hexagon.png" SetSize="16 16" Modulate="#ff4500"/>
+                            <Label Modulate="#4bb2b5" Text="{Loc 'power-monitoring-window-label-smes'}"/>
+                        </BoxContainer>
+                        <BoxContainer>
+                            <TextureRect Margin="0 2 2 0" Stretch="KeepAspectCentered" TexturePath="/Textures/Interface/NavMap/beveled_square.png" SetSize="16 16" Modulate="#ffff00"/>
+                            <Label Modulate="#4bb2b5" Text="{Loc 'power-monitoring-window-label-substation'}"/>
+                        </BoxContainer>
+                        <BoxContainer>
+                            <TextureRect Margin="0 2 2 0" Stretch="KeepAspectCentered" TexturePath="/Textures/Interface/NavMap/beveled_triangle.png" SetSize="16 16" Modulate="#32cd32"/>
+                            <Label Modulate="#4bb2b5" Text="{Loc 'power-monitoring-window-label-apc'}"/>
+                        </BoxContainer>
                     </BoxContainer>
                 </BoxContainer>
-            </BoxContainer>
-        </BoxContainer>
 
-        <!-- Footer -->
-        <BoxContainer Orientation="Vertical">
-            <PanelContainer StyleClasses="LowDivider" />
-            <BoxContainer Orientation="Horizontal" Margin="10 2 5 0" VerticalAlignment="Bottom">
-                <Label Text="{Loc 'power-monitoring-window-flavor-left'}" StyleClasses="WindowFooterText" />
-                <Label Text="{Loc 'power-monitoring-window-flavor-right'}" StyleClasses="WindowFooterText"
-                        HorizontalAlignment="Right" HorizontalExpand="True"  Margin="0 0 5 0" />
-                <TextureRect StyleClasses="NTLogoDark" Stretch="KeepAspectCentered"
-                        VerticalAlignment="Center" HorizontalAlignment="Right" SetSize="19 19"/>
+                <!-- Power status -->
+                <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 10">
+
+                    <!-- Station name -->
+                    <PanelContainer Modulate="#4bb2b5">
+                        <!-- Окантовка вокруг карты -->
+                        <PanelContainer.PanelOverride>
+                            <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="2" />
+                        </PanelContainer.PanelOverride>
+                        <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="0 0">
+                            <PanelContainer>
+                                <PanelContainer.PanelOverride>
+                                    <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="0 0 0 2" />
+                                </PanelContainer.PanelOverride>
+                                <RichTextLabel Name="StationName" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0"/>
+                            </PanelContainer>
+
+                            <!-- Power overview -->
+                            <BoxContainer Orientation="Horizontal" Margin="5 5">
+                                <BoxContainer Orientation="Vertical">
+                                    <Label Text="{Loc 'power-monitoring-window-total-sources'}"/>
+                                    <Label Text="{Loc 'power-monitoring-window-total-battery-usage'}"/>
+                                    <Label Text="{Loc 'power-monitoring-window-total-loads'}"/>
+                                </BoxContainer>
+                                <BoxContainer Orientation="Vertical" HorizontalExpand="True" HorizontalAlignment="Right">
+                                    <Label Name="TotalSources" Text="?"/>
+                                    <Label Name="TotalBatteryUsage" Text="?"/>
+                                    <Label Name="TotalLoads" Text="?"/>
+                                </BoxContainer>
+                            </BoxContainer>
+
+                        </BoxContainer>
+                    </PanelContainer>
+
+                    <!-- Loads / Sources (entries added by C# code) -->
+                    <TabContainer Modulate="#4bb2b5" Name="MasterTabContainer" VerticalExpand="True" HorizontalExpand="True" Margin="0 10 0 0">
+                        <TabContainer.PanelStyleBoxOverride>
+                            <gfx:StyleBoxFlat BorderColor="#4bb2b5" BorderThickness="2" />
+                        </TabContainer.PanelStyleBoxOverride>
+                        <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
+                            <BoxContainer Name="SourcesList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
+                        </ScrollContainer>
+                        <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
+                            <BoxContainer Name="SMESList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
+                        </ScrollContainer>
+                        <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
+                            <BoxContainer Name="SubstationList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
+                        </ScrollContainer>
+                        <ScrollContainer HorizontalExpand="True" Margin="8, 8, 8, 8">
+                            <BoxContainer Name="ApcList" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin="0 0 10 0"/>
+                        </ScrollContainer>
+                    </TabContainer>
+
+                    <!-- Cable network toggles -->
+                    <BoxContainer Orientation="Vertical" Margin="5 10 5 0">
+                        <Label ModulateSelfOverride="#4bb2b5" Text="{Loc 'power-monitoring-window-show-cable-networks'}" Margin="0 0 0 5"/>
+                        <BoxContainer Orientation="Horizontal" Modulate="#4bb2b5" HorizontalExpand="True">
+                            <CheckBox Name="ShowHVCable" Pressed="True" Text="{Loc 'power-monitoring-window-show-hv-cable'}" Margin="0 0 0 0"/>
+                            <CheckBox Name="ShowMVCable" Pressed="True" Text="{Loc 'power-monitoring-window-show-mv-cable'}" Margin="10 0 0 0"/>
+                            <CheckBox Name="ShowLVCable" Pressed="True" Text="{Loc 'power-monitoring-window-show-lv-cable'}" Margin="10 0 0 0"/>
+                        </BoxContainer>
+                    </BoxContainer>
+
+                </BoxContainer>
             </BoxContainer>
-        </BoxContainer>
+        </Control>
+        <!-- Footer
+            <BoxContainer Orientation="Vertical">
+                <PanelContainer StyleClasses="LowDivider" />
+                <BoxContainer Orientation="Horizontal" Margin="10 2 5 0" VerticalAlignment="Bottom">
+                    <Label Text="{Loc 'power-monitoring-window-flavor-left'}" StyleClasses="WindowFooterText" />
+                    <Label Text="{Loc 'power-monitoring-window-flavor-right'}" StyleClasses="WindowFooterText"
+                            HorizontalAlignment="Right" HorizontalExpand="True"  Margin="0 0 5 0" />
+                    <TextureRect StyleClasses="NTLogoDark" Stretch="KeepAspectCentered"
+                            VerticalAlignment="Center" HorizontalAlignment="Right" SetSize="19 19"/>
+                </BoxContainer>
+            </BoxContainer>
+        -->
     </BoxContainer>
-</controls:FancyWindow>
+</ui:PowerMonitoringWindow>
