--- a/Content.Client/Atmos/Consoles/AtmosAlarmEntryContainer.xaml
+++ b/Content.Client/Atmos/Consoles/AtmosAlarmEntryContainer.xaml
@@ -5,26 +5,28 @@
          Orientation="Vertical" HorizontalExpand ="True" Margin="0 0 0 3">
 
     <!-- Device selection button -->
-    <Button Name="FocusButton" HorizontalExpand="True" SetHeight="32" Margin="12 0 0 0" StyleClasses="OpenBoth" Access="Public">
-        <BoxContainer HorizontalExpand="True" VerticalExpand="True" Orientation="Horizontal">
+    <Control>
+        <controls:MonotoneButton ModulateSelfOverride="#2F4C52" Name="FocusButton"  HorizontalExpand="True" SetHeight="32" Margin="6 0 0 0" StyleClasses="OpenLeft" Access="Public">
+            <BoxContainer HorizontalExpand="True" VerticalExpand="True" Orientation="Horizontal">
 
-            <!-- Alarm state -->
-            <TextureRect Stretch="Keep" HorizontalAlignment="Left" Margin="-20 -2 0 0" ModulateSelfOverride="#25252a" TexturePath="/Textures/Interface/AtmosMonitoring/status_bg.png">
-                <BoxContainer VerticalExpand="True" HorizontalExpand="True" Orientation="Horizontal" Margin="8 0">
-                    <TextureRect Name="ArrowTexture" VerticalAlignment="Center" SetSize="12 12" Stretch="KeepAspectCentered" Margin="3 0" TexturePath="/Textures/Interface/Nano/triangle_right.png"></TextureRect>
-                    <Label Name="AlarmStateLabel" HorizontalExpand="True" HorizontalAlignment="Center" FontColorOverride="#5A5A5A" Text="{Loc 'atmos-alerts-window-invalid-state'}"></Label>
-                </BoxContainer>
-            </TextureRect>
+                <!-- Alarm state -->
+                <TextureRect Stretch="Keep" HorizontalAlignment="Left" Margin="-24 -2 0 0" ModulateSelfOverride="#2F4C52" TexturePath="/Textures/Interface/AtmosMonitoring/status_bg.png">
+                    <BoxContainer VerticalExpand="True" HorizontalExpand="True" Orientation="Horizontal" Margin="8 0">
+                        <TextureRect Name="ArrowTexture" VerticalAlignment="Center" SetSize="12 12" Stretch="KeepAspectCentered" Margin="3 0" TexturePath="/Textures/Interface/Nano/triangle_right.png"></TextureRect>
+                        <Label Name="AlarmStateLabel"  HorizontalExpand="True" HorizontalAlignment="Center" FontColorOverride="#5A5A5A" Text="{Loc 'atmos-alerts-window-invalid-state'}"></Label>
+                    </BoxContainer>
+                </TextureRect>
 
-            <!-- Alarm name -->
-            <Label Name="AlarmNameLabel" Text="???" HorizontalExpand="True" HorizontalAlignment="Center" Margin="5 0"></Label>
-        </BoxContainer>
-    </Button>
+                <!-- Alarm name -->
+                <Label Name="AlarmNameLabel" ModulateSelfOverride="#2F4C52" Text="???" HorizontalExpand="True" HorizontalAlignment="Center" Margin="5 0"></Label>
+            </BoxContainer>
+        </controls:MonotoneButton>
+    </Control>
 
     <!-- Panel that appears on selecting the device -->
-    <PanelContainer Name="FocusContainer" HorizontalExpand="True" Margin="1 -1 1 0" ReservesSpace="False" Visible="False" Access="Public">
+    <PanelContainer Name="FocusContainer" HorizontalExpand="True" Margin="0 -1 1 0" ReservesSpace="False" Visible="False" Access="Public">
         <PanelContainer.PanelOverride>
-            <gfx:StyleBoxFlat BackgroundColor="#25252a"/>
+            <gfx:StyleBoxFlat BackgroundColor="#122B30"/>
         </PanelContainer.PanelOverride>
         <BoxContainer HorizontalExpand="True" VerticalExpand="True" Orientation="Vertical">
 
@@ -40,7 +42,7 @@
                     </BoxContainer>
                     <PanelContainer HorizontalExpand="True">
                         <PanelContainer.PanelOverride>
-                            <gfx:StyleBoxFlat BackgroundColor="#202023"/>
+                            <gfx:StyleBoxFlat BackgroundColor="#2F4C52"/>
                         </PanelContainer.PanelOverride>
                         <BoxContainer HorizontalExpand="True" Orientation="Horizontal">
                             <Label Name="TemperatureLabel" Text="???" HorizontalAlignment="Center" HorizontalExpand="True" FontColorOverride="#5A5A5A" Margin="0 2 0 0" SetHeight="24"></Label>
@@ -53,7 +55,7 @@
                     </BoxContainer>
                     <PanelContainer HorizontalExpand="True">
                         <PanelContainer.PanelOverride>
-                            <gfx:StyleBoxFlat BackgroundColor="#202023"/>
+                            <gfx:StyleBoxFlat BackgroundColor="#2F4C52"/>
                         </PanelContainer.PanelOverride>
 
                         <!-- Gas entries added via C# code -->
