--- a/Content.Client/Shuttles/UI/DockingScreen.xaml
+++ b/Content.Client/Shuttles/UI/DockingScreen.xaml
@@ -1,28 +1,51 @@
-<controls:BoxContainer Visible="False"
-               HorizontalExpand="True"
-               xmlns:controls="https://spacestation14.io"
-               xmlns:controls1="clr-namespace:Content.Client.UserInterface.Controls"
-               xmlns:ui="clr-namespace:Content.Client.Shuttles.UI">
-    <ui:ShuttleDockControl Name="DockingControl"
-                       MouseFilter="Stop"
-                       VerticalAlignment="Stretch"
-                       VerticalExpand="True"
-                       HorizontalExpand="True"
-                       Margin="5 4 10 5"/>
-    <controls:BoxContainer Name="RightDisplayDock"
-                           VerticalAlignment="Top"
-                           HorizontalAlignment="Right"
-                           MinWidth="256"
-                           MaxWidth="256"
-                           Align="Center"
-                           Margin="5 0 5 5"
-                           Orientation="Vertical">
-        <controls1:StripeBack MinSize="48 48">
-            <controls:Label Name="DockingPortsLabel" Text="{controls:Loc 'shuttle-console-docks-label'}" HorizontalAlignment="Center"/>
-        </controls1:StripeBack>
-        <controls:ScrollContainer VerticalExpand="True" HScrollEnabled="False"
-                                  ReturnMeasure="True">
-            <controls:BoxContainer Name="DockPorts" Orientation="Vertical"/>
-        </controls:ScrollContainer>
-    </controls:BoxContainer>
-</controls:BoxContainer>
+<BoxContainer 
+    Visible="False"
+    HorizontalExpand="True"
+    xmlns="https://spacestation14.io"
+    xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+    xmlns:ui="clr-namespace:Content.Client.Shuttles.UI"
+    xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client">
+    <PanelContainer Margin="5 0 0 0">
+        <PanelContainer.PanelOverride>
+            <gfx:StyleBoxFlat BorderColor="#4bb2b5" BorderThickness="2" />
+        </PanelContainer.PanelOverride>
+        <ui:ShuttleDockControl 
+            Name="DockingControl"
+            MouseFilter="Stop"
+            VerticalAlignment="Stretch"
+            VerticalExpand="True"
+            HorizontalExpand="True"
+            Margin="0 4 0 4"
+            UIDisplayRadius="210"
+            SetSize="424 424"/>
+    </PanelContainer>
+    <BoxContainer 
+        Name="RightDisplayDock"
+        VerticalAlignment="Top"
+        HorizontalAlignment="Right"
+        MinWidth="256"
+        MaxWidth="256"
+        Align="Center"
+        Margin="5 0 5 5"
+        Orientation="Vertical">
+        <PanelContainer Modulate="#4bb2b5">
+            <PanelContainer.PanelOverride>
+                <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="2" />
+            </PanelContainer.PanelOverride>
+
+            <BoxContainer Orientation="Vertical">
+                <Label StyleClasses="ConsoleText" Name="DockingPortsLabel" Text="{Loc 'shuttle-console-docks-label'}" HorizontalAlignment="Center"/>
+
+                <!-- Выделяющая панель разделитель -->
+                <PanelContainer StyleClasses="LowDivider" HorizontalExpand="True" SetHeight="2">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="1" />
+                    </PanelContainer.PanelOverride>
+                </PanelContainer>
+                <ScrollContainer VerticalExpand="True" Margin="5 5 5 5" HScrollEnabled="False" ReturnMeasure="True">
+                    <BoxContainer Name="DockPorts" SeparationOverride="5" Orientation="Vertical"/>
+                </ScrollContainer>
+            </BoxContainer>
+        </PanelContainer>
+    </BoxContainer>
+</BoxContainer>
