--- a/Content.Client/Shuttles/UI/NavScreen.xaml
+++ b/Content.Client/Shuttles/UI/NavScreen.xaml
@@ -1,69 +1,83 @@
-<controls:BoxContainer Visible="False"
-              HorizontalExpand="True"
-              xmlns:controls="https://spacestation14.io"
-              xmlns:ui="clr-namespace:Content.Client.Shuttles.UI"
-              xmlns:controls1="clr-namespace:Content.Client.UserInterface.Controls">
-                <ui:ShuttleNavControl Name="NavRadar"
-                                 MouseFilter="Stop"
-                                 VerticalAlignment="Stretch"
-                                 VerticalExpand="True"
-                                 HorizontalExpand="True"
-                                 Margin="5 4 10 5"/>
-                <!-- Nav controls -->
-                <controls:BoxContainer Name="RightDisplayNav"
-                      VerticalAlignment="Top"
-                      HorizontalAlignment="Right"
-                      VerticalExpand="True"
-                      MinWidth="256"
-                      MaxWidth="256"
-                      Margin="5 0 5 5"
-                      Orientation="Vertical">
-                    <controls1:StripeBack
-                        MinSize="48 48">
-                        <controls:Label Name="NavDisplayLabel" Text="{controls:Loc 'shuttle-console-display-label'}"
-                               VerticalExpand="True"
-                               HorizontalAlignment="Center"/>
-                    </controls1:StripeBack>
-                    <controls:GridContainer Columns="2"
-                                   HorizontalAlignment="Stretch"
-                                   VerticalAlignment="Top"
-                                   HorizontalExpand="True"
-                                   Margin="3"
-                                   Name="ReadonlyDisplay">
-                        <controls:Label Text="{controls:Loc 'shuttle-console-position'}"/>
-                        <controls:Label Name="GridPosition"
-                               Text="0.0, 0.0"
-                               HorizontalExpand="True"
-                               Align="Right"/>
-                        <controls:Label Text="{controls:Loc 'shuttle-console-orientation'}"/>
-                        <controls:Label Name="GridOrientation"
-                               Text="0.0"
-                               HorizontalExpand="True"
-                               Align="Right"/>
-                        <controls:Label Text="{controls:Loc 'shuttle-console-linear-velocity'}"/>
-                        <controls:Label Name="GridLinearVelocity"
-                               Text="0.0, 0.0"
-                               HorizontalExpand="True"
-                               Align="Right"/>
-                        <controls:Label Text="{controls:Loc 'shuttle-console-angular-velocity'}"/>
-                        <controls:Label Name="GridAngularVelocity"
-                               Text="0.0"
-                               HorizontalExpand="True"
-                               Align="Right"/>
-                    </controls:GridContainer>
-                    <controls1:StripeBack
-                        MinSize="48 48">
-                        <controls:Label Name="NavSettingsLabel" Text="{controls:Loc 'shuttle-console-nav-settings'}"
-                               VerticalExpand="True"
-                               HorizontalAlignment="Center"/>
-                    </controls1:StripeBack>
-                    <controls:Button Name="IFFToggle"
-                            Text="{controls:Loc 'shuttle-console-iff-toggle'}"
-                            TextAlign="Center"
-                            ToggleMode="True"/>
-                    <controls:Button Name="DockToggle"
-                            Text="{controls:Loc 'shuttle-console-dock-toggle'}"
-                            TextAlign="Center"
-                            ToggleMode="True"/>
-                </controls:BoxContainer>
-            </controls:BoxContainer>
+<BoxContainer Visible="False"
+    HorizontalExpand="True"
+    xmlns="https://spacestation14.io"
+    xmlns:ui="clr-namespace:Content.Client.Shuttles.UI"
+    xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+    xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client">
+    <PanelContainer Margin="5 0 0 0">
+        <PanelContainer.PanelOverride>
+            <gfx:StyleBoxFlat BorderColor="#4bb2b5" BorderThickness="2" />
+        </PanelContainer.PanelOverride>
+        <ui:ShuttleNavControl
+            Name="NavRadar"
+            MouseFilter="Stop"
+            VerticalAlignment="Stretch"
+            VerticalExpand="True"
+            HorizontalExpand="True"
+            UIDisplayRadius="210"
+            SetSize="424 424"
+            Margin="0 4 0 4"/>
+    </PanelContainer>
+    <!-- Nav  -->
+    <BoxContainer Name="RightDisplayNav"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Right"
+            VerticalExpand="True"
+            MinWidth="256"
+            MaxWidth="256"
+            Margin="5 0 5 5"
+            SeparationOverride="10"
+            Orientation="Vertical">
+
+        <!-- Выделяющая панель -->
+        <PanelContainer Modulate="#4bb2b5">
+            <PanelContainer.PanelOverride>
+                <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="2" />
+            </PanelContainer.PanelOverride>
+
+            <BoxContainer Orientation="Vertical">
+                <Label StyleClasses="ConsoleText" Name="NavDisplayLabel" Text="{Loc 'shuttle-console-display-label'}" VerticalExpand="True" HorizontalAlignment="Center"/>
+
+                <!-- Выделяющая панель разделитель -->
+                <PanelContainer StyleClasses="LowDivider" HorizontalExpand="True" SetHeight="2">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="1" />
+                    </PanelContainer.PanelOverride>
+                </PanelContainer>
+
+                <GridContainer Columns="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" HorizontalExpand="True" Margin="8 5" Name="ReadonlyDisplay">
+                    <Label Text="{Loc 'shuttle-console-position'}"/>
+                    <Label Name="GridPosition" Text="0.0, 0.0" HorizontalExpand="True" Align="Right"/>
+                    <Label Text="{Loc 'shuttle-console-orientation'}"/>
+                    <Label Name="GridOrientation" Text="0.0" HorizontalExpand="True" Align="Right"/>
+                    <Label Text="{Loc 'shuttle-console-linear-velocity'}"/>
+                    <Label Name="GridLinearVelocity" Text="0.0, 0.0" HorizontalExpand="True" Align="Right"/>
+                    <Label Text="{Loc 'shuttle-console-angular-velocity'}"/>
+                    <Label Name="GridAngularVelocity" Text="0.0" HorizontalExpand="True" Align="Right"/>
+                </GridContainer>
+            </BoxContainer>
+        </PanelContainer>
+
+        <!-- Выделяющая панель -->
+        <PanelContainer Modulate="#4bb2b5">
+            <PanelContainer.PanelOverride>
+                <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="2" />
+            </PanelContainer.PanelOverride>
+
+            <BoxContainer Orientation="Vertical">
+                <Label StyleClasses="ConsoleText" Name="NavSettingsLabel" Text="{Loc 'shuttle-console-nav-settings'}" VerticalExpand="True" HorizontalAlignment="Center"/>
+
+                <!-- Выделяющая панель разделитель -->
+                <PanelContainer StyleClasses="LowDivider" HorizontalExpand="True" SetHeight="2">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BorderColor="#FFFFFF" BorderThickness="1" />
+                    </PanelContainer.PanelOverride>
+                </PanelContainer>
+
+                <controls:MonotoneButton Margin="5 5" StyleClasses="OpenBoth"  Name="IFFToggle" Text="{Loc 'shuttle-console-iff-toggle'}" TextAlign="Center" ToggleMode="True"/>
+                <controls:MonotoneButton Margin="5 5" StyleClasses="OpenBoth" Name="DockToggle" Text="{Loc 'shuttle-console-dock-toggle'}" TextAlign="Center" ToggleMode="True"/>
+            </BoxContainer>
+        </PanelContainer>
+
+    </BoxContainer>
+</BoxContainer>
